Fixed Sonarqube issues